# fxbot

./: .buildinfo  .env  .env.bak  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  data_feed.py  genindex.html  index.html  market_order.py  objects.inv  order_api.py  patch.diff.bak  prices_demo.py  pyproject.toml  requirements.txt  scheduler.py  search.html  searchindex.js  strategy.py  test_api.py  walk_forward_phase5.py
.doctrees/: environment.pickle  index.doctree
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: auto-merge.yml  ci.yml  codeql.yml  docker-build.yml  docker-publish.yml  docs-pages.yml  gh-pages.legacy.yml  gh-pages.yml  pages.yml  release-drafter.yml
_sources/: index.rst.txt
docs/: conf.py
docs/_static/: custom.css
fxbot/: validators.py
tests/: conftest.py  test_signals.py  test_validators.py
