# 既存の [tool.ruff] セクションを ↓ に置き換え
[tool.ruff]
line-length = 100




[tool.pytest.ini_options]
pythonpath = [ "." ]

[project]
name = "fxbot"
version = "0.1.0"
description = "FX bot back‑tester"
authors = [{name = "taka"}]

[tool.setuptools]
packages = ["fxbot"]      # ← ★ パッケージは fxbot のみと明示

[tool.ruff.format]   # see official settings ⟶ docs.astral.sh :contentReference[oaicite:2]{index=2}
docstring-code-format = true
indent-style = "space"
